src/Debug/DownloadMii.log
Build started 2015-04-12 17:47:02.
     1>Project "C:\Users\Filiph\Desktop\DownloadMii-3DS\src\DownloadMii.vcxproj" on node 2 (Build target(s)).
     1>Build:
         make
         AppDownloader.cpp
         arm-none-eabi-g++ -MMD -MP -MF /c/Users/Filiph/Desktop/DownloadMii-3DS/src/build/AppDownloader.d -Wunused -g -Wall -O3 -mword-relocations -fomit-frame-pointer -ffast-math -march=armv6k -mtune=mpcore -mfloat-abi=hard -I/c/Users/Filiph/Desktop/DownloadMii-3DS/src/include -I/c/Users/Filiph/Desktop/DownloadMii-3DS/src/include/DownloadMii -I/c/devkitPro/libctru/include -I/c/devkitPro/portlibs/armv6k/include -I/c/devkitPro/portlibs/3ds/include -I/c/Users/Filiph/Desktop/DownloadMii-3DS/src/build -Wunused -Wno-write-strings -DARM11 -D_3DS  -fno-rtti -fno-exceptions -std=gnu++11 -c /c/Users/Filiph/Desktop/DownloadMii-3DS/src/source/DownloadMii/AppDownloader.cpp -o AppDownloader.o 
         Core.cpp
         arm-none-eabi-g++ -MMD -MP -MF /c/Users/Filiph/Desktop/DownloadMii-3DS/src/build/Core.d -Wunused -g -Wall -O3 -mword-relocations -fomit-frame-pointer -ffast-math -march=armv6k -mtune=mpcore -mfloat-abi=hard -I/c/Users/Filiph/Desktop/DownloadMii-3DS/src/include -I/c/Users/Filiph/Desktop/DownloadMii-3DS/src/include/DownloadMii -I/c/devkitPro/libctru/include -I/c/devkitPro/portlibs/armv6k/include -I/c/devkitPro/portlibs/3ds/include -I/c/Users/Filiph/Desktop/DownloadMii-3DS/src/build -Wunused -Wno-write-strings -DARM11 -D_3DS  -fno-rtti -fno-exceptions -std=gnu++11 -c /c/Users/Filiph/Desktop/DownloadMii-3DS/src/source/DownloadMii/Core.cpp -o Core.o 
         c:/Users/Filiph/Desktop/DownloadMii-3DS/src/source/DownloadMii/Core.cpp: In constructor 'DownloadMii::DownloadMii::DownloadMii()':
         c:/Users/Filiph/Desktop/DownloadMii-3DS/src/source/DownloadMii/Core.cpp:19:27: error: no matching function for call to 'DownloadMii::AppDownloader::AppDownloader()'
           DownloadMii::DownloadMii() {
                                    ^
         c:/Users/Filiph/Desktop/DownloadMii-3DS/src/source/DownloadMii/Core.cpp:19:27: note: candidates are:
         In file included from c:/Users/Filiph/Desktop/DownloadMii-3DS/src/include/DownloadMii/Core.hpp:16:0,
                          from c:/Users/Filiph/Desktop/DownloadMii-3DS/src/source/DownloadMii/Core.cpp:11:
         c:/Users/Filiph/Desktop/DownloadMii-3DS/src/include/DownloadMii/AppDownloader.hpp:43:3: note: DownloadMii::AppDownloader::AppDownloader(DownloadMii::ServerConnector*)
            AppDownloader(ServerConnector* serverConnector);
            ^
         c:/Users/Filiph/Desktop/DownloadMii-3DS/src/include/DownloadMii/AppDownloader.hpp:43:3: note:   candidate expects 1 argument, 0 provided
         c:/Users/Filiph/Desktop/DownloadMii-3DS/src/include/DownloadMii/AppDownloader.hpp:40:8: note: constexpr DownloadMii::AppDownloader::AppDownloader(const DownloadMii::AppDownloader&)
           class AppDownloader {
                 ^
         c:/Users/Filiph/Desktop/DownloadMii-3DS/src/include/DownloadMii/AppDownloader.hpp:40:8: note:   candidate expects 1 argument, 0 provided
         make[1]: *** [Core.o] Error 1
         make: *** [build] Error 2
     1>C:\Program Files (x86)\MSBuild\Microsoft.Cpp\v4.0\V140\Microsoft.MakeFile.Targets(42,5): error MSB3073: The command "make" exited with code 2.
     1>Done Building Project "C:\Users\Filiph\Desktop\DownloadMii-3DS\src\DownloadMii.vcxproj" (Build target(s)) -- FAILED.

Build FAILED.

Time Elapsed 00:00:01.38
